@@ -65,5 +65,6 @@ GXD_IndexOverview|GXD Index Overview|An overview of the data in the GXD index fo
 GXD_IndexOverviewUber|GXD Index Uber|An overview of all data in the GXD index.|lec|Jackie Finger|2024-05-30|*
 GXD_HTExperimentPMID|GXD HT Experiment Partially Reviewed Papers|Do PMID search to find unevaluated experiments associated with papers that have an experiment chosen to be indexed.\r\nExperiment Type = RNA-Seq, Not Resolved|liangh|Connie Smith|2025-01-14|
 GXD_HTSampleAlleles|GXD HT Index all alleles|which alleles (excluding wild type) are used to annotate GXDHT_Samples?|lec|Connie Smith|2025-06-02|
+GXD_HTExperimentToDo|GXD HT Experiment To Do List|A list of HT Experiments that are either Curation State=Not Done and Evaluation in (Yes, Maybe)|lec|Connie Smith|2025-06-30|
 # UNCOMMENT if needed for development
 #testReport|test|Test report.|jer|Joel Richardson|2024-06-27|*
