@@ -1,3 +1,10 @@
+TAG: qcreports_db-6-0-25-29
+DATE: 06/30/2025
+STAFF: lec
+wts2-1691/e4g-302/produce on demand list of HT experiments selected to be curated
+        new file:   pwi/GXD_HTExperimentToDo.py
+        modified:   pwi/pwireports.txt
+
 TAG: qcreports_db-6-0-25-28
 TAG: qcreports_db-6-0-25-27
 DATE: 06/25/2025
